# bk-tree

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  annotated.html  bktree_8hpp_source.html  clang-format.sh  classbk__tree_1_1BKTree-members.html  classbk__tree_1_1BKTree.html  classbk__tree_1_1BKTree_1_1Iterator-members.html  classbk__tree_1_1BKTree_1_1Iterator.html  classbk__tree_1_1metrics_1_1DamerauLevenshteinDistance-members.html  classbk__tree_1_1metrics_1_1DamerauLevenshteinDistance.html  classbk__tree_1_1metrics_1_1Distance-members.html  classbk__tree_1_1metrics_1_1Distance.html  classbk__tree_1_1metrics_1_1EditDistance-members.html  classbk__tree_1_1metrics_1_1EditDistance.html  classbk__tree_1_1metrics_1_1HammingDistance-members.html  classbk__tree_1_1metrics_1_1HammingDistance.html  classbk__tree_1_1metrics_1_1IdentityDistance-members.html  classbk__tree_1_1metrics_1_1IdentityDistance.html  classbk__tree_1_1metrics_1_1LCSDistance-members.html  classbk__tree_1_1metrics_1_1LCSDistance.html  classbk__tree_1_1metrics_1_1LCSubseqDistance-members.html  classbk__tree_1_1metrics_1_1LCSubseqDistance.html  classbk__tree_1_1metrics_1_1LeeDistance-members.html  classbk__tree_1_1metrics_1_1LeeDistance.html  classbk__tree_1_1metrics_1_1LengthDistance-members.html  classbk__tree_1_1metrics_1_1LengthDistance.html  classbk__tree_1_1metrics_1_1UniformDistance-members.html  classbk__tree_1_1metrics_1_1UniformDistance.html  classes.html  dir_398f8cae34a6f3acdac4945c148e8619.html  dir_4feeed5bd18a8eece23b117f3c226f24.html  dir_c617a1b1c9fe8d5e9ca6e4b3cb077b41.html  files.html  hierarchy.html  index.html  (+4 more)
.github/workflows/: cmake.yml  format-pr.yml  release.yml
benchmarks/: CMakeLists.txt  main.cpp
bktree/: bktree.hpp
docs/: README.md
examples/: bktree_damerau.cpp  bktree_edit.cpp  bktree_hamming.cpp  bktree_lcs.cpp  example.cpp  examples.cpp
scripts/: clang-format.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  namespaces_0.js  pages_0.js  pages_1.js  searchdata.js
tests/: CMakeLists.txt  bktree_base.cpp  bktree_damerau.cpp  bktree_edit.cpp  bktree_hamming.cpp  bktree_uniform.cpp  distance_damerau.cpp  distance_edit.cpp  distance_hamming.cpp  distance_lcs.cpp  distance_lee.cpp  distance_length.cpp  distance_uniform.cpp
